[project]
name = "echo-copy"
version = "0.1.1"
description = "A simple Python script that reads from stdin and copies the input to the system clipboard "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyperclip>=1.11.0",
]

[project.scripts]
ec = "echo_copy:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
